Actualizacion de codigo

--- a/Carrito.html
+++ b/Carrito.html
@@ -222,13 +222,10 @@
 <hr>
   <!--Agregar a la lista-->
   <section class="container-fluid" id="Lista-Compras">
-    <h1><strong>Lista de Compras</strong></h1>
-    <h2 class="mt-1" id="carrito-items"></h2>
-    <div id="carrito-items" class="cart-items">
-        <p>Aún no has agregado productos al carrito.</p>
-    </div>
+    <h1>Lista de Compras</h1>
+    <h2 class="mt-1" id="carrito-items">Carrito de Compras</h2>
     <h3>Total: $<span id="total">0.00</span></h3>
-
+    
   </section>
   
 
