--- a/about.html
+++ b/about.html
@@ -74,9 +74,9 @@
     <section id="equipo" class="text-center">
       <div class="card justify-content-center align-items-center" style="background-color: rgb(121, 121, 234);">
         <br>
-        <img src="/Imagenes/Foto.jpg" class="card-img-top-fluid rounded mb-3" alt="Foto" style="width: 100px;">
+        <img src="../Imagenes/Foto.jpg" class="card-img-top-fluid rounded mb-3" alt="Foto" style="width: 100px;">
         <div class="card-body">
-          <h5 class="card-title" id="">Erika rodriguez Cañar</h5>
+          <h5 class="card-title" id="">Erika Rodriguez Cañar</h5>
           <p class="card-text"><strong>Co-Fundador y CEO </strong><br>
             Erika lidera el equipo con su visión innovadora y pasión por la educación. Tiene más de 15 años de experiencia en el sector tecnológico.</p>          
         </div>
